# StockTracker

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
src/pokemon_stock_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stockcheck/: __init__.py  alerts.py  api.py  cli.py  config.py  discovery.py  geo.py  models.py  runner.py  state.py  tickets.py
src/stockcheck/adapters/: __init__.py  base.py  bestbuy.py  gamestop.py  playwright_base.py  target.py  walmart.py
src/stockcheck/templates/: index.html  tickets.html
tests/: test_discovery.py  test_geo.py  test_state.py  test_tickets.py
